Use the right dir as the default download location.  Bug 204548, patch by josha@mac.com (Josh Aas), r=sdagley, sr=bzbarsky